syntax = "proto3";
package api;

option go_package = "github.com/JuanBiancuzzo/own_wiki/core"; 

// ---+--- Imports ---+---

import "components.proto";

// ---+--- Services ---+---

/*
    UserInteraction represents the contract that the user (implemented via the client executable) should
    uphold, where it should be capable of: 
        * The load the user code
        * Register the structures define by the user 
        * Importing a stream of files to generated data to be saved 
        * Render the scene as intende by the user
*/
service UserInteraction {
    // Loads the user code given by a path, and register the component structures to save the data
    rpc LoadPlugin(LoadPluginRequest) returns (LoadPluginResponse);

    // Lets the user load data from files and returns the component data
    rpc ImportFiles(stream ImportedFilesRequest) returns (stream ImportFilesResponse);

    // Lets the user render the data, and changes its behaviour given the events of the system
    rpc Render(stream RenderRequest) returns (stream RenderResponse);
}

/*
    SystemInteraction represents the contract that the system (implemented via the server executable) should
    uphold, where it should be capable of: 
        * Return information from the save data
        * Send events to the system
*/
service SystemInteraction {
    // Lets the system send the data to the user, that was save
    rpc Query(QueryRequest) returns (QueryResponse);

    // Lets the system receive events that are generated by the user
    rpc SendEvent(SendEventRequest) returns (Empty);
}

// ---+--- Messages ---+---

// Represents a void message
message Empty {}

// Gives the path to the user code, refere as plugin
message LoadPluginRequest {
    string plugin_path = 1;
}

// Gives the component structures define by the user
message LoadPluginResponse {
    repeated ComponentStructure components = 1;
}

// Gives the file path to be imported to generate data
message ImportedFilesRequest {
    string file_path = 1;
} 

// Gives the component description define by the user
message ImportFilesResponse {
    ComponentDescription component = 1;
}

// Gives the list of events that happend in a given frame, and its information
message RenderRequest {
    repeated Event events = 1;
    FrameInformation frame = 2;
}

// Gives the scene description of a frame
message RenderResponse {
    SceneDescription scene = 1;
}

// Gives the component information to generate a query 
message QueryRequest {
    ComponentDescription query = 1;
}

// Gives the response to the query information given
message QueryResponse {
    ComponentDescription result = 1;
}

// Gives the event generated by the user
message SendEventRequest {
    Event event = 1;
}

// --- Pending to define ---

message Event {}

message FrameInformation {}

message SceneDescription {}