syntax = "proto3";
package own_wiki;
option go_package = "./proto";

// --- Messages ---

message Empty {}

message LoadPluginRequest {
    string path = 1;
}

message LoadPluginResponse {
    bool has_error = 1;
    string error_reason = 2;
}

message RegisterStructuresResponse {
    bool has_error = 1;
    string error_reson = 2;
    ECV ecv = 3;
}

message InitializeImportRequest {
    uint32 upload_server = 1;
}

message ProcessFileRequest {
    string file = 1;
}

message InitializeViewManegerRequest {
    WorldConfiguration world_configuration = 1;
    uint32 data_server = 2;
}

message InitializeViewRequest {
    string initial_view = 1;
    EntityDescription viewData = 2;
    uint32 data_server = 3;
}

message WalkSceneRequest {
    repeated Event events = 1;
}

message RenderSceneResponse {
    // User oneof
}

message UploadRequest {
    ComponentDescription component = 1;
}

message QueryRequest {

}

message QueryResponse {
    EntityDescription entity = 1;
}

message SendEventRequest {
    Event event = 1;
}

// --- Structs ---

// Builder del ecv, describe el sistema de componentes, entidades y views
message ECV {}

message ComponentDescription {}

message EntityDescription {}

message WorldConfiguration {}

message Event {
  oneof source {
    string local_path = 1;
    string url = 2;
  }
}

// --- Services ---

service UserStructureData {
    rpc LoadPlugin(LoadPluginRequest) returns (LoadPluginResponse);
    rpc RegisterStructures(Empty) returns (RegisterStructuresResponse);

    rpc InitializeImport(InitializeImportRequest) returns (Empty);
    rpc ProcessFile(ProcessFileRequest) returns (Empty);
    rpc FinishImporting(Empty) returns (Empty);

    rpc InitializeViewManeger(InitializeViewManegerRequest) return (Empty);
    rpc InitializeView(InitializeViewRequest) returns (Empty);
    rpc WalkScene(WalkSceneRequest) returns (Empty);
    rpc RenderScene(Empty) returns (RenderSceneResponse);
}


service UploadEntity {
    rpc Upload(UploadRequest) returns (Empty);
}

service OWData {
    rpc Query(QueryRequest) returns (QueryResponse);
    rpc SendEvent(SendEventRequest) returns (Empty);
}